fixed spacing around the image

--- a/stylesheet/index.css
+++ b/stylesheet/index.css
@@ -20,7 +20,7 @@ body {
   box-shadow: 4px 4px 4px rgb(149, 148, 148);
   background-color: #fff;
   border-radius: 10px;
-  padding: 2em;
+  padding: 1.2em;
 }
 #qr-container img {
   width: 100%;
